# hanono

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/: release-please-config.json
.github/workflows/: build.yml
scripts/: run-hanono.sh
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppModals.vue  ConvertDialog.vue  FxPanel.vue  Player.vue  PlaylistSidebar.vue  TrimDialog.vue  WaveformCanvas.vue
src/composables/: useAudioEngine.ts  useLyricsSearch.ts
