[package]
name = "hanono"
version = "0.4.1"
description = "A Tauri Music Player"
authors = ["you"]
edition = "2021"

[lib]
name = "hanono_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
png = "0.17"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "aac", "alac", "flac", "isomp4", "pcm", "vorbis", "wav"] }
rmp-serde = "1"
tokio = { version = "1", features = ["rt"] }
ffmpeg-sidecar = "2"

